--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css" 
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -86,5 +86,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
